# fomat-macros

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: bench.rs
foo/: Cargo.toml
foo/src/: lib.rs
foo/tests/: test.rs
src/: lib.rs
tests/: capturing.rs  extern.rs  test.rs
tests/pint/: Cargo.toml
tests/pint/src/: lib.rs  main.rs
tests/pint/tests/: nocapture.rs
