[package]
name = "fomat-macros"
version = "0.2.0"
authors = ["Michał Krasnoborski <mkrdln@gmail.com>"]

description = "Alternative syntax for print/write/format-like macros with a small templating language"

documentation = "https://docs.rs/fomat-macros"
homepage = "https://github.com/krdln/fomat-macros"
repository = "https://github.com/krdln/fomat-macros"
readme = "README.md"
keywords = ["macro", "print", "template", "format", "interpolation"]
license = "MIT"

[dev-dependencies]
tar = "0.4.9"
tempdir = "0.3.5"
